# SmartOCR

./: README.md
cpp/: CMakeLists.txt  main.cpp  preprocess.cpp
python/: nlp_postprocess.py  ocr_runner.py
